--- a/web/build.gradle
+++ b/web/build.gradle
@@ -6,4 +6,5 @@ dependencies {
     implementation 'org.joinfaces:jsf-spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.primefaces:primefaces:12.0.0'
+    implementation 'io.nayuki:qrcodegen:1.8.0'
 }
