--- a/negocio/build.gradle
+++ b/negocio/build.gradle
@@ -1,13 +1,9 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'mysql:mysql-connector-java'
+    runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.5'
     //implementation 'com.google.zxing:core:3.5.0'
     //implementation 'com.google.zxing:javase:3.5.0'
     implementation 'com.cloudinary:cloudinary-http44:1.33.0'
     implementation 'org.jasypt:jasypt:1.9.3'
-}
-
-test {
-    useJUnitPlatform()
 }
