--- a/negocio/src/main/resources/application.properties
+++ b/negocio/src/main/resources/application.properties
@@ -1,16 +1,20 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.datasource.url=jdbc:mysql://localhost:3306/unicine?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1234
-
-spring.jpa.show-sql=true
+## PostgreSQL
+spring.datasource.url=${JDBC_DATABASE_URL:}
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+server.port=${PORT:5000}
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
+joinfaces.primefaces.move-scripts-to-bottom=true
+spring.thymeleaf.enabled=false
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.properties.mail.smtp.auth=true
 spring.mail.username=clientes.unicine@gmail.com
 spring.mail.password=turpsqdlocxrjrol
+spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
